test/corpus/expressions.txt
==================
Expressions
==================

filter(data, @C1 > 2 and @C1 < 5)

data as raw_data
1+1 as raw_data

---

(source_file
    (function_call
        function: (identifier)
        (argument
            (identifier))
        (argument
            (binary_expression
                (binary_expression
                    (column_identifier
                        (identifier))
                    operator: (comparison_operator)
                    (num_literal))
                operator: (and_operator)
                (binary_expression
                    (column_identifier
                        (identifier))
                    operator: (comparison_operator)
                    (num_literal)))))
    (alias
        (identifier)
        (identifier))
    (alias
        (binary_expression
            (num_literal)
            operator: (add_sub_operator)
            (num_literal))
        (identifier))
    )
