test/corpus/function_call.txt
==================
Function calls
==================

call1()
call2(var1)
call3(var1, var2)

---

(source_file
    (function_call
        (identifier))
    (function_call
        (identifier)
        (argument
            (identifier)))
    (function_call
        (identifier)
        (argument
            (identifier))
        (argument
            (identifier))))
